--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.1.0",
-    "framer-motion": "^11.0.3",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.18.2",
     "next": "14.1.0",
     "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1"
+    "react-icons": "^5.0.1",
+    "tailwind-merge": "^3.0.2"
   },
   "devDependencies": {
     "@types/node": "22.13.13",
